--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>
         Giant Travels
     </title>
-    <link rel="stylesheet" href="css/color.css">
+    <link rel="stylesheet" href="color.css">
     
 </head>
 
@@ -17,7 +17,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <img src="images/giant3-removebg-preview.png" alt="bus" class="logo-img">
+                    <img src="giant3-removebg-preview.png" alt="bus" class="logo-img">
                 </div>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -41,23 +41,23 @@
         <section class="features" id="features">
 
             <div class="boxes">
-                <img src="images/book1-removebg-preview.png" alt="" style="width: 60px;">
+                <img src="book1-removebg-preview.png" alt="" style="width: 60px;">
                 <h2>Onlne<br>Booking</h2>
             </div>
             <div class="boxes">
-                <img src="images/card-removebg-preview.png" alt="" style="width: 60px;">
+                <img src="card-removebg-preview.png" alt="" style="width: 60px;">
                 <h2>Accept All<br>Cards</h2>
             </div>
             <div class="boxes">
-                <img src="images/cus-removebg-preview.png" alt="" style="width: 60px;">
+                <img src="cus-removebg-preview.png" alt="" style="width: 60px;">
                 <h2>Customer<br>Care Service</h2>
             </div>
             <div class="boxes">
-                <img src="images/hygenic-removebg-preview (1).png" alt="" style="width: 60px;">
+                <img src="hygenic-removebg-preview (1).png" alt="" style="width: 60px;">
                 <h2>Hygenic<br>Coach</h2>
             </div>
             <div class="boxes">
-                <img src="images/map-removebg-preview.png" alt="" style="width: 60px;">
+                <img src="map-removebg-preview.png" alt="" style="width: 60px;">
                 <h2>Live<br>Tracking</h2>
             </div>
         </section>
